[package]
name = "dicom-gen"
version = "0.1.0"
edition = "2024"

[dependencies]
dicom-object = "0.7"
dicom-ul = "0.7"
dicom-dictionary-std = "0.7"
dicom-core = "0.7"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
socket2 = { version = "0.5", features = ["all"] }
